--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "newInventor/settings-tool",
   "description": "Settings tool for projects",
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "license": "MIT",
   "authors": [
     {
@@ -17,35 +17,9 @@
       "NewInventor\\SettingsTool\\": "src/"
     }
   },
-  "repositories": [
-    {
-      "type": "package",
-      "package": {
-        "name": "newInventor/singleton",
-        "version": "1.0.0",
-        "source": {
-          "url": "https://github.com/newInventor/singleton",
-          "type": "git",
-          "reference": "master"
-        }
-      }
-    },
-    {
-      "type": "package",
-      "package": {
-        "name": "newInventor/type-checker",
-        "version": "1.0.0",
-        "source": {
-          "url": "https://github.com/newInventor/type-checker",
-          "type": "git",
-          "reference": "master"
-        }
-      }
-    }
-  ],
   "require": {
-    "newInventor/singleton": "*",
-    "newInventor/type-checker": "*"
+    "new-inventor/patterns": "*",
+    "new-inventor/type-checker": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "5.1.*"
